Script commit 1  in global_variables

--- a/calico_versioned_docs/version-3.26/getting-started/kubernetes/windows-calico/quickstart.mdx
+++ b/calico_versioned_docs/version-3.26/getting-started/kubernetes/windows-calico/quickstart.mdx
@@ -107,7 +107,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{calicoReleasesURL}}/{{releaseTitle}}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {variables.calicoReleasesURL}/{{releaseTitle}}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
@@ -205,7 +205,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{calicoReleasesURL}}/{{releaseTitle}}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {variables.calicoReleasesURL}/{{releaseTitle}}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
@@ -292,7 +292,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{calicoReleasesURL}}/{{releaseTitle}}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {variables.calicoReleasesURL}/{{releaseTitle}}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
