--- a/calico-cloud_versioned_docs/version-20-1/image-assurance/install-the-admission-controller.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/image-assurance/install-the-admission-controller.mdx
@@ -56,7 +56,7 @@ Container admission policies are custom Kubernetes resources that allow you to c
    `admission_controller_key.pem` and `admission_controller_cert.pem`, or use the following command to generate the pair:
 
    ```bash
-   export URL="{{clouddownloadurl}}/manifests" && curl ${URL}/generate-open-ssl-key-cert-pair.sh | bash
+   export URL="{variables.clouddownloadurl}/manifests" && curl ${URL}/generate-open-ssl-key-cert-pair.sh | bash
    ```
 
    :::caution
