--- a/calico-cloud_versioned_docs/version-20-1/operations/monitor/metrics/license-agent.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/operations/monitor/metrics/license-agent.mdx
@@ -53,7 +53,7 @@ To add the license-agent component in a Kubernetes cluster for license metrics, 
    ```
 1. Apply the manifest.
    ```
-    kubectl apply -f {{filesUrl_CE}}/manifests/licenseagent.yaml
+    kubectl apply -f {variables.filesUrl_CE}/manifests/licenseagent.yaml
    ```
 
 ### Create alerts using Prometheus metrics
