--- a/calico-cloud_versioned_docs/version-20-1/threat/tor-vpn-feed-and-dashboard.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/threat/tor-vpn-feed-and-dashboard.mdx
@@ -51,11 +51,11 @@ In this section we will look at how to add Tor and VPN feeds to {{prodname}}. In
 1. Add threat feed to the cluster.
    For VPN Feed,
    ```shell
-   kubectl apply -f {{filesUrl_CE}}/manifests/threatdef/vpn-feed.yaml
+   kubectl apply -f {variables.filesUrl_CE}/manifests/threatdef/vpn-feed.yaml
    ```
    For Tor Bulk Exit Feed,
    ```shell
-   kubectl apply -f {{filesUrl_CE}}/manifests/threatdef/tor-exit-feed.yaml
+   kubectl apply -f {variables.filesUrl_CE}/manifests/threatdef/tor-exit-feed.yaml
    ```
 2. Now, you can monitor the Dashboard for any malicious activity. The dashboard can be found at {{prodname}} Manager, go to "kibana" and then go to "Dashboard". Select "Tor-VPN Dashboard".
 3. Additionally, feeds can be checked using following command:
