Script commit 11  in global_variables

--- a/calico/getting-started/kubernetes/nftables.mdx
+++ b/calico/getting-started/kubernetes/nftables.mdx
@@ -95,7 +95,7 @@ Installing {{prodname}} in nftables mode provides a networking and network polic
 1. Install the Tigera {{prodname}} operator and custom resource definitions.
 
    ```bash
-   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
+   kubectl create -f {variables.manifestsUrl}/manifests/tigera-operator.yaml
    ```
 
    :::note
