--- a/calico_versioned_docs/version-3.27/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico_versioned_docs/version-3.27/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -49,7 +49,7 @@ When using the Amazon VPC CNI plugin, {{prodname}} does not support enforcement 
 1. Install the operator.
 
    ```bash
-   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
+   kubectl create -f {variables.manifestsUrl}/manifests/tigera-operator.yaml
    ```
 
 1. Configure the {{prodname}} installation.
@@ -125,7 +125,7 @@ Before you get started, make sure you have downloaded and configured the [necess
 1. Install the operator.
 
    ```bash
-   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
+   kubectl create -f {variables.manifestsUrl}/manifests/tigera-operator.yaml
    ```
 
 1. Configure the {{prodname}} installation.
@@ -157,7 +157,7 @@ Before you get started, make sure you have downloaded and configured the [necess
 1. Install the {{prodname}} manifest.
 
    ```bash
-   kubectl apply -f {{manifestsUrl}}/manifests/calico-vxlan.yaml
+   kubectl apply -f {variables.manifestsUrl}/manifests/calico-vxlan.yaml
    ```
 
 1. Configure {{prodname}} to disable AWS src/dst checks.
