--- a/calico_versioned_docs/version-3.26/getting-started/bare-metal/installation/binary-mgr.mdx
+++ b/calico_versioned_docs/version-3.26/getting-started/bare-metal/installation/binary-mgr.mdx
@@ -30,7 +30,7 @@ This guide covers installing Felix, the {{prodname}} daemon that handles network
 ### Step 1: Install binaries
 
 ```bash
-sudo add-apt-repository ppa:project-calico/{{ ppa_repo_name }}
+sudo add-apt-repository ppa:project-calico/{variables.ppa_repo_name}
 sudo apt-get update
 sudo apt-get upgrade
 sudo apt-get install calico-felix
@@ -42,11 +42,11 @@ _RPM requires_: RedHat 7-derived distribution
 cat > /etc/yum.repos.d/calico.repo <<EOF
 [calico]
 name=Calico Repository
-baseurl=http://binaries.projectcalico.org/rpm/{{ ppa_repo_name }}/
+baseurl=http://binaries.projectcalico.org/rpm/{variables.ppa_repo_name}/
 enabled=1
 skip_if_unavailable=0
 gpgcheck=1
-gpgkey=http://binaries.projectcalico.org/rpm/{{ ppa_repo_name }}/key
+gpgkey=http://binaries.projectcalico.org/rpm/{variables.ppa_repo_name}/key
 priority=97
 EOF
 
