Script commit 20  in global_variables

--- a/calico-enterprise/operations/clis/calicoq/installing.mdx
+++ b/calico-enterprise/operations/clis/calicoq/installing.mdx
@@ -96,7 +96,7 @@ corresponds to your desired deployment.
    registry.
 
    ```bash
-   docker pull {{registry}}{{componentImage.calicoq}}
+   docker pull {variables.registry}{{componentImage.calicoq}}
    ```
 
 1. Confirm that the image has loaded by typing `docker images`.
