Script commit 21  in global_variables

--- a/calico_versioned_docs/version-3.26/getting-started/kubernetes/windows-calico/openshift-installation.mdx
+++ b/calico_versioned_docs/version-3.26/getting-started/kubernetes/windows-calico/openshift-installation.mdx
@@ -203,7 +203,7 @@ aws ec2 get-password-data --instance-id <instance id> --priv-launch-key <aws pri
 1. Download the powershell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {variables.calicoReleasesURL}/{{releaseTitle}}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {variables.calicoReleasesURL}/{variables.releaseTitle}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Run the installation script, replacing the Kubernetes version with the version corresponding to your version of OpenShift.
