--- a/calico_versioned_docs/version-3.28/_includes/content/_docker-container-service.mdx
+++ b/calico_versioned_docs/version-3.28/_includes/content/_docker-container-service.mdx
@@ -52,7 +52,7 @@ ExecStart=/usr/bin/docker run --net=host --privileged \
  -v /run/docker/plugins:/run/docker/plugins \
  -v /lib/modules:/lib/modules \
  -v /etc/pki:/pki \
- {variables.registry}{{imageNames.calico/node}}:{{releaseTitle}} /bin/calico-node -felix
+ {variables.registry}{{imageNames.calico/node}}:{variables.releaseTitle} /bin/calico-node -felix
 
 ExecStop=-/usr/bin/docker stop {variables.noderunning}
 
