Script commit 27  in global_variables

--- a/calico/operations/upgrading/openshift-upgrade.mdx
+++ b/calico/operations/upgrading/openshift-upgrade.mdx
@@ -9,7 +9,7 @@ import InstallOpenShiftManifests from '@site/calico/_includes/components/Install
 
 ## About upgrading {variables.prodname}
 
-This page describes how to upgrade to {{version}} for OpenShift 4 from an existing {variables.prodname} cluster.
+This page describes how to upgrade to {variables.version} for OpenShift 4 from an existing {variables.prodname} cluster.
 
 ## Upgrade OwnerReferences
 
