--- a/calico_versioned_docs/version-3.27/operations/upgrading/openshift-upgrade.mdx
+++ b/calico_versioned_docs/version-3.27/operations/upgrading/openshift-upgrade.mdx
@@ -10,7 +10,7 @@ import InstallOpenShiftManifests from '@site/calico_versioned_docs/version-3.27/
 
 ## About upgrading {variables.prodname}
 
-This page describes how to upgrade to {{version}} for OpenShift 4 from an existing {variables.prodname} cluster.
+This page describes how to upgrade to {variables.version} for OpenShift 4 from an existing {variables.prodname} cluster.
 
 <HostEndpointsUpgrade orch='OpenShift' />
 
