--- a/calico_versioned_docs/version-3.28/getting-started/kubernetes/requirements.mdx
+++ b/calico_versioned_docs/version-3.28/getting-started/kubernetes/requirements.mdx
@@ -13,14 +13,14 @@ import ReqsKernel from "@site/calico_versioned_docs/version-3.28/_includes/compo
 
 #### Supported versions
 
-We test {variables.prodname} {{version}} against the following Kubernetes versions. Other versions may work, but we are not actively testing them.
+We test {variables.prodname} {variables.version} against the following Kubernetes versions. Other versions may work, but we are not actively testing them.
 
 - v1.27
 - v1.28
 - v1.29
 - v1.30
 
-Due to changes in the Kubernetes API, {variables.prodname} {{version}} will not work
+Due to changes in the Kubernetes API, {variables.prodname} {variables.version} will not work
 on Kubernetes v1.20 or below. v1.21 may work, but is no longer tested.
 Newer versions may also work, but we recommend upgrading to a version of {variables.prodname}
 that is tested against the newer Kubernetes version.
