--- a/calico-enterprise_versioned_docs/version-3.17/operations/clis/calicoctl/install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/operations/clis/calicoctl/install.mdx
@@ -270,7 +270,7 @@ If you run these commands from your local machine (instead of a host node), some
    registry.
 
    ```bash
-   docker pull {variables.registry}{{componentImage.calicoctl}}
+   docker pull {variables.registry}{variables.componentImage.calicoctl}
    ```
 
 1. Confirm that the image has loaded by typing `docker images`.
