--- a/calico-cloud_versioned_docs/version-20-1/threat/deploying-waf-ingress-gateway.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/threat/deploying-waf-ingress-gateway.mdx
@@ -47,7 +47,7 @@ Create an IstioOperator custom resource to enable custom sidecar injection.
 Use the provided IstioOperator definition as a starting point:
 
 <CodeBlock language='bash'>
-kubectl apply -f - <<EOF
+kubectl apply -f - \<\<EOF
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 metadata:
@@ -129,7 +129,7 @@ We configure Istio ingress gateway using an EnvoyFilter called ext_authz to dele
 To intercept traffic at the Istio ingress gateway or load balancer, use an EnvoyFilter named tigera.istio-system.gateway.ingressgateway.waf-ext-authz. This global EnvoyFilter applies to ingress gateway pods matching the specified workload selector labels.
 
 ```bash
-kubectl apply -f - <<EOF
+kubectl apply -f - \<\<EOF
 apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
@@ -176,7 +176,7 @@ Ensure Istio ingress gateway and HTTPBin tutorial is correctly installed and run
 Override the httpbin VirtualService config from the HTTPBin Tutorial with the following one to allow the /anything and /headers path.
 
 ```bash
-kubectl apply -f - <<EOF
+kubectl apply -f - \<\<EOF
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
@@ -246,7 +246,7 @@ To empower the user with the flexibility to customize the WAF core rulesets acco
 Users can utilize a configmap to configure WAF rules and behavior. For example:
 
 ```bash
-kubectl apply -f - <<EOF
+kubectl apply -f - \<\<EOF
 apiVersion: v1
 kind: ConfigMap
 metadata:
