Fixes imports for manifest-archive.mdx

--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/manifest-archive.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/manifest-archive.mdx
@@ -3,11 +3,11 @@ description: Install an older patch release of Calico Enterprise.
 ---
 
 import variables from '@site/calico-enterprise_versioned_docs/version-3.19-2/variables';
-
-# Install a patch release
-
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import ReleaseArchiveTable from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/ReleaseArchiveTable';
+
+# Install a patch release
 
 Installing the most recent patch version of {variables.prodname} {variables.version} ensures that you have the latest bug fixes and improvements.
 But you can always install, or downgrade to, a previous patch version.
