--- a/calico-enterprise/getting-started/manifest-archive.mdx
+++ b/calico-enterprise/getting-started/manifest-archive.mdx
@@ -3,6 +3,7 @@ description: Install an older patch release of Calico Enterprise.
 ---
 
 import variables from '@site/calico-enterprise/variables';
+import ReleaseArchiveTable from '@site/calico-enterprise/_includes/components/ReleaseArchiveTable';
 
 # Install a patch release
 
