--- a/calico-enterprise/networking/configuring/dual-tor.mdx
+++ b/calico-enterprise/networking/configuring/dual-tor.mdx
@@ -467,13 +467,13 @@ longer matters if there is any other programming of the true default route on th
 
 :::note
 
-EarlyNetworkingConfiguration supplies labels and AS numbers to apply to each
+EarlyNetworkConfiguration supplies labels and AS numbers to apply to each
 Calico node, as well as peering and other network configuration to use during node
 startup prior to receiving BGPPeer and BGPConfiguration resources from the datastore.
-EarlyNetworkingConfiguration will be superseded by any BGPPeer or BGPConfiguration
+EarlyNetworkConfiguration will be superseded by any BGPPeer or BGPConfiguration
 resources after successful startup.
 
-For a full description of the EarlyNetworkingConfiguration resource, see [here](../../reference/resources/earlynetworkconfiguration.mdx)
+For a full description, see [Early Network Configuration](../../reference/resources/earlynetworkconfiguration.mdx)
 :::
 
 ### Arrange for dual-homed nodes to run {{nodecontainer}} on each boot
