--- a/calico-enterprise/reference/resources/earlynetworkconfiguration.mdx
+++ b/calico-enterprise/reference/resources/earlynetworkconfiguration.mdx
@@ -10,12 +10,11 @@ startup prior to receiving BGPPeer and BGPConfiguration resources from the datas
 Early network configuration will be superseded by any BGPPeer or BGPConfiguration
 resources after successful startup.
 
-For a detailed guide on how to set up dual ToR, see [here](../../networking/configuring/dual-tor.mdx).
-
-:::note
 Early network configurations are intended for use only when {{prodname}} is being run in "early networking" mode, i.e. when operating a "dual ToR" networking configuration. If you are not running a dual-plane cluster, this is probably not what you are looking for!
 For configuring BGP networking under normal circumstances (when {{prodname}} is running), see [BGPConfiguration](bgpconfig.mdx), [BGPPeer](bgppeer.mdx), and [BGPFilter](bgpfilter.mdx).
-:::
+
+For a detailed guide on how to set up dual ToR, see [Deploy a dual ToR cluster](../../networking/configuring/dual-tor.mdx).
+
 
 ## Sample YAML
 EarlyNetworkConfiguration differs from other {{prodname}} resources, in that it is not directly applied with `kubectl` / `calicoctl`.
@@ -103,10 +102,10 @@ data:
 ### ConfigStableAddress
 | Field                                 | Description                                                     | Accepted Values   | Schema Default |
 | ------------------------------------- | --------------------------------------------------------------- | ----------------- | -------------- |
-| address | IP address which {{prodname}} should provision during earlynetworking as the "stable" address | IP Address string | ""             |
+| address | IP address which {{prodname}} should provision during early networking as the "stable" address | IP Address string | ""             |
 
 ### ConfigPeering
 | Field        | Description                                                                                               | Accepted Values   | Schema Default |
 | ------------ | --------------------------------------------------------------------------------------------------------- | ----------------- | -------------- |
 | peerIP       | The IP address of the ToR                                                                                 | IP Address string | ""             |
-| peerASNumber | The AS number of the ToR. When left as 0, {{prodname}} early-networking will use its own node's AS number | integer           | 0              |
+| peerASNumber | The AS number of the ToR. When left as 0, {{prodname}} early networking will use its own node's AS number | integer           | 0              |
