fix code and note blocks in dualtor pages (#1649)

--- a/calico-enterprise/networking/configuring/dual-tor.mdx
+++ b/calico-enterprise/networking/configuring/dual-tor.mdx
@@ -256,7 +256,7 @@ longer matters if there is any other programming of the true default route on th
     the ToR routers in its rack. For example, if your rack 'A' has ToRs with IPs
     172.31.11.100 and 172.31.12.100 and the rack AS number is 65001:
 
-    ```yaml noValidation
+    ```yaml
     apiVersion: projectcalico.org/v3
     kind: BGPPeer
     metadata:
@@ -276,7 +276,6 @@ longer matters if there is any other programming of the true default route on th
       peerIP: 172.31.12.100
       asNumber: 65001
       sourceAddress: None
-    EOF
     ```
 
     :::note
@@ -316,7 +315,7 @@ longer matters if there is any other programming of the true default route on th
 
       For directly connected BGP peerings, BIRD provides two gateway
       computation modes, "direct" and "recursive".
-.
+
       "recursive" is the default, but "direct" can give better results when the ToR
       also acts as the route reflector (RR) for the rack.
       Specifically, a combined ToR/RR should ideally keep the BGP next hop intact (aka
@@ -330,8 +329,7 @@ longer matters if there is any other programming of the true default route on th
 
       :::
 
-1.  Prepare this BGPConfiguration resource to [disable the full node-to-node     mesh](bgp.mdx#disable-the-default-bgp-node-to-node-mesh)
-:
+1.  Prepare this BGPConfiguration resource to [disable the full node-to-node     mesh](bgp.mdx#disable-the-default-bgp-node-to-node-mesh):
 
     ```yaml
     apiVersion: projectcalico.org/v3
@@ -469,12 +467,13 @@ longer matters if there is any other programming of the true default route on th
 
 :::note
 
-EarlyNetworkingConfiguration supplies labels and AS numbers to apply to each
+EarlyNetworkConfiguration supplies labels and AS numbers to apply to each
 Calico node, as well as peering and other network configuration to use during node
 startup prior to receiving BGPPeer and BGPConfiguration resources from the datastore.
-EarlyNetworkingConfiguration will be superseded by any BGPPeer or BGPConfiguration
+EarlyNetworkConfiguration will be superseded by any BGPPeer or BGPConfiguration
 resources after successful startup.
 
+For a full description, see [Early Network Configuration](../../reference/resources/earlynetworkconfiguration.mdx)
 :::
 
 ### Arrange for dual-homed nodes to run {{nodecontainer}} on each boot
