--- a/calico-cloud_versioned_docs/version-19-2/users/user-management.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/users/user-management.mdx
@@ -10,7 +10,7 @@ description: Authenticate and authorize users.
 
 ## Roles and authorization
 
-Users can have one of the following predefined user roles to access features in Manager UI.
+Users can have one or more of the following predefined user roles to access features in Manager UI.
 The default permissions align with typical needs for each role.
 
 This table describes what level of access each predefined role has for features in Manager UI:
