--- a/calico-enterprise/getting-started/install-on-clusters/openshift/hostedcontrolplanes.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/openshift/hostedcontrolplanes.mdx
@@ -69,7 +69,7 @@ hypershift create cluster aws \
   --aws-creds $AWS_CREDS \
   --region $REGION \
   --generate-ssh \
-  --network-type Other \
+  --network-type Other
 ```
 
 :::note
