--- a/calico/getting-started/kubernetes/openshift/hostedcontrolplanes.mdx
+++ b/calico/getting-started/kubernetes/openshift/hostedcontrolplanes.mdx
@@ -68,7 +68,7 @@ hypershift create cluster aws \
   --aws-creds $AWS_CREDS \
   --region $REGION \
   --generate-ssh \
-  --network-type Other \
+  --network-type Other
 ```
 
 :::note
