--- a/calico_versioned_docs/version-3.26/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
+++ b/calico_versioned_docs/version-3.26/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
@@ -195,6 +195,8 @@ The **etcd** datastore is not recommended for new Kubernetes installs:
 
 * etcd is another component to manage and maintain.
 * Some newer Kubernetes-targeted features (such as Service matches in policy) are not supported with the etcd datastore.
+* eBPF dataplane mode is not supported with the etcd datastore.  It relies on watching Services to implement some features,
+  which is not supported with the etcd datastore.
 * The Cloud/Enterprise versions of {{prodname}} do not support etcd mode at all so using this manifest prevents
   upgrade to those versions of {{prodname}}.
 
