Update based on feedback

--- a/calico-cloud/image-assurance/understanding-scan-results.mdx
+++ b/calico-cloud/image-assurance/understanding-scan-results.mdx
@@ -61,11 +61,11 @@ To change the CVSS threshold values, note the following:
 
 ## Exploit Data
 
-The scanning process also attaches EPSS and known exploit data onto each image and vulnerability.
+The scanning process also attaches EPSS and known exploit data onto each image and vulnerability viewable through the UI.
 
-EPSS information can be found [here](https://www.first.org/epss/model).
+Information about [The EPSS Model](https://www.first.org/epss/model) can be found on the EPSS website created by [FIRST](https://www.first.org/).
 
-Known Exploits are based off of the [CISA KEV Catalog](https://www.cisa.gov/known-exploited-vulnerabilities-catalog).
+Known exploits are based off of the [CISA KEV Catalog](https://www.cisa.gov/known-exploited-vulnerabilities-catalog).
 
 ## Export results
 
