--- a/calico-cloud/reference/resources/runtimesecurity.mdx
+++ b/calico-cloud/reference/resources/runtimesecurity.mdx
@@ -4,15 +4,15 @@ description: API for this Calico Cloud resource
 
 # RuntimeSecurity Custom Resource
 
-The **RuntimeSecurity** custom resource (CR) is used to enable and configure Runtime Security monitoring in a Calico Cloud managed cluster.
+The **RuntimeSecurity** custom resource (CR) is used to enable and configure Container Threat Detection in a Calico Cloud managed cluster.
 
 ### Resource Definition
 
 ```yaml
-apiVersion: apiextensions.k8s.io/v1
-kind: CustomResourceDefinition
+apiVersion: operator.tigera.io/v1
+kind: RuntimeSecurity
 metadata:
-  name: runtimesecurities.operator.tigera.io
+  name: defaultmy-runtimesecurity-config
 spec:
   detectorConfig:
     - id: 190
