change duplicate field name

--- a/calico-cloud/reference/resources/runtimesecurity.mdx
+++ b/calico-cloud/reference/resources/runtimesecurity.mdx
@@ -70,7 +70,7 @@ generation of runtime reports.
 | matching          | Whether the entries are exact matches to fields or considered a regex expression                                       | Exact, Regex    | string  |
 | processInvocation | The exact name or regex expression of the process to which a user wants to negate the generation of runtime logs       |                 | string  |
 | pod               | The exact name or regex expression of the pod(s) to which a user wants to negate the generation of runtime logs        |                 | string  |
-| processInvocation | The exact name or regex expression of the namespace(s) to which a user wants to negate the generation of runtime logs  |                 | string  |
+| namespace         | The exact name or regex expression of the namespace(s) to which a user wants to negate the generation of runtime logs  |                 | string  |
 
 ### RuntimeReproterDaemonset
 
