remove golang specific scheme type

--- a/calico-cloud/reference/resources/runtimesecurity.mdx
+++ b/calico-cloud/reference/resources/runtimesecurity.mdx
@@ -96,9 +96,9 @@ If any of the fields below are specified, they will override the default runtime
 
 | Field        | Description                                                                               | Accepted Values | Schema                                                                                                         | Default |
 | --------     | ----------------------------------------------------------------------------------------- | --------------- | -------------------------------------------------------------------------------------------------------------- | ------- |
-| Containers   | Containers is a list of runtime reporter DaemonSet containers.                            |                 | [RuntimeReporterDaemonSetContainer](#runtimereporterdaemonsetcontainer)                                                                              |         |
+| Containers   | Containers is a list of runtime reporter DaemonSet containers.                            |                 | [RuntimeReporterDaemonSetContainer](#runtimereporterdaemonsetcontainer)                                        |         |                                      |         |
 | Affinity     | Affinity is a group of affinity scheduling rules for the runtime reporter DaemonSet pods. |                 | [corev1.Affinity](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.23/#affinity-v1-core)       |         |
-| nodeSelector | NodeSelector is the runtime reporter pod's scheduling constraints.                        |                 | map[string]string                                                                                              |         |
+| nodeSelector | NodeSelector is the runtime reporter pod's scheduling constraints.                        |                 | map                                                                                                            |         |
 | tolerations  | Tolerations is the runtime reporter pod's tolerations.                                    |                 | [corev1.Tolerations](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.23/#toleration-v1-core)  |         |
 
 ### RuntimeReporterDaemonSetContainer
