Add endpoint for runtime security resource

--- a/calico-cloud/reference/index.mdx
+++ b/calico-cloud/reference/index.mdx
@@ -52,6 +52,7 @@ APIs, CLI, architecture and design, and FAQ.
   <DocCardLink docId='reference/resources/node' />
   <DocCardLink docId='reference/resources/packetcapture' />
   <DocCardLink docId='reference/resources/remoteclusterconfiguration' />
+  <DocCardLink docId='reference/resources/runtimesecurity' />
   <DocCardLink docId='reference/resources/securityeventwebhook' />
   <DocCardLink docId='reference/resources/stagedglobalnetworkpolicy' />
   <DocCardLink docId='reference/resources/stagedkubernetesnetworkpolicy' />
