--- a/calico-cloud/reference/resources/runtimesecurity.mdx
+++ b/calico-cloud/reference/resources/runtimesecurity.mdx
@@ -2,7 +2,7 @@
 description: API for this Calico Cloud resource 
 ---
 
-# RuntimeSecurity Custom Resource
+# RuntimeSecurity
 
 The **RuntimeSecurity** custom resource (CR) is used to enable and configure Container Threat Detection in a Calico Cloud managed cluster.
 
