Fixes code block comment error

--- a/calico-enterprise_versioned_docs/version-3.17/network-policy/policy-firewalls/aws-integration/aws-security-group-integration.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/network-policy/policy-firewalls/aws-integration/aws-security-group-integration.mdx
@@ -166,8 +166,7 @@ Because `KOPS_CLUSTER_NAMES` are FQDNs, you must to choose a `CLUSTER_NAME` that
     aws cloudformation create-stack \
     --stack-name tigera-cloudtrail \
     --template-body {variables.filesUrl}/manifests/aws/security-group-integration/account-cf.yaml
-
-     # Wait for the stack to finish provisioning
+    \# Wait for the stack to finish provisioning
     aws cloudformation wait stack-create-complete --stack-name tigera-cloudtrail
     </CodeBlock>
 
@@ -187,8 +186,7 @@ Because `KOPS_CLUSTER_NAMES` are FQDNs, you must to choose a `CLUSTER_NAME` that
     --parameters ParameterKey=VpcId,ParameterValue=$VPC_ID \
     --capabilities CAPABILITY_IAM \
     --template-body {variables.filesUrl}/manifests/aws/security-group-integration/vpc-cf.yaml
-
-     # Wait for the stack to finish provisioning
+    \# Wait for the stack to finish provisioning
     aws cloudformation wait stack-create-complete --stack-name tigera-vpc-$VPC_ID
     </CodeBlock>
 
@@ -201,8 +199,7 @@ Because `KOPS_CLUSTER_NAMES` are FQDNs, you must to choose a `CLUSTER_NAME` that
                  ParameterKey=KubernetesHostDefaultSGId,ParameterValue=$K8S_NODE_SGS \
                  ParameterKey=KubernetesControlPlaneSGId,ParameterValue=$CONTROL_PLANE_SG \
     --template-body {variables.filesUrl}/manifests/aws/security-group-integration/cluster-cf.yaml
-
-     # Wait for the stack to finish provisioning
+    \# Wait for the stack to finish provisioning
     aws cloudformation wait stack-create-complete --stack-name tigera-cluster-$CLUSTER_NAME
     </CodeBlock>
 
