Fixes more VPP links

--- a/calico_versioned_docs/version-3.26/reference/vpp/technical-details.mdx
+++ b/calico_versioned_docs/version-3.26/reference/vpp/technical-details.mdx
@@ -3,6 +3,7 @@ description: Technical details on the VPP dataplane integration.
 ---
 
 import variables from '@site/calico_versioned_docs/version-3.26/variables';
+import Link from '@docusaurus/Link';
 
 # VPP dataplane implementation details
 
@@ -14,7 +15,7 @@ The VPP dataplane integration is split in two components, `vpp-manager` which ha
 
 ### vpp-manager
 
-VPP Manager is a very light process responsible for the bootstrap of VPP, including uplink interface addressing and routing configuration. It also restores the Linux configuration on shutdown. The code can be found in this directory: [https://github.com/projectcalico/vpp-dataplane/tree/{variables.vppbranch}/vpp-manager](https://github.com/projectcalico/vpp-dataplane/tree/{variables.vppbranch}/vpp-manager).
+VPP Manager is a very light process responsible for the bootstrap of VPP, including uplink interface addressing and routing configuration. It also restores the Linux configuration on shutdown. The code can be found in this directory: <Link to={`https://github.com/projectcalico/vpp-dataplane/tree/${variables.vppbranch}/vpp-manager`}>{`https://github.com/projectcalico/vpp-dataplane/tree/${variables.vppbranch}/vpp-manager`}</Link>.
 
 On startup, vpp-manager starts by determining the desired configuration for the VPP uplink by checking it's configuration in Linux, including addresses and routes. It then renders an appropriate configuration file for VPP, and starts the VPP process.
 
@@ -28,7 +29,8 @@ vpp-manager is voluntarily kept as simple as possible, to minimize the risk of b
 
 ### calico-vpp-agent
 
-The {variables.prodname} VPP agent is the process responsible for all the {variables.prodname}-specific configuration in VPP. Its code lives in this directory: [https://github.com/projectcalico/vpp-dataplane/tree/{variables.vppbranch}/calico-vpp-agent](https://github.com/projectcalico/vpp-dataplane/tree/{variables.vppbranch}/calico-vpp-agent).
+The {variables.prodname} VPP agent is the process responsible for all the {variables.prodname}-specific configuration in VPP. Its code lives in this directory: <Link to={`https://github.com/projectcalico/vpp-dataplane/tree/${variables.vppbranch}/calico-vpp-agent`}>{`https://github.com/projectcalico/vpp-dataplane/tree/${variables.vppbranch}/calico-vpp-agent`}</Link>
+.
 
 This agent is split in four main components, which interact with the k8s and {variables.prodname} APIs to configure VPP. These components are the routing manager, the CNI server, the services manager and the policies manager.
 
