--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -90,6 +90,24 @@ If a malicious or suspicious program is run within the cluster, it will be repor
 
 ![malware-alert-example](/img/calico-cloud/malware-alert-example.png)
 
+
+### Create Exceptions for runtime logs
+
+If there is a program running within the cluster that is performing a suspicious action but you want to except it from create a runtime log, and thus from triggering a Security Event. Then you can create an Excetpion in the Runtime Security CR: 
+
+```bash
+kubectl apply -f - <<EOF
+apiVersion: operator.tigera.io/v1
+kind: RuntimeSecurity
+metadata:
+  name: default
+spec:
+  runtimeExceptionList:
+  
+EOF
+```
+
+
 ## Container activity logs in Kibana
 
 Lower-level reports for file and process activity are captured for your cluster in Kibana using the index pattern `tigera_secure_ee_runtime*`.
